[package]
name = "krustlet_state_machine"
version = "0.1.0"
authors = ["kflansburg <kevin.flansburg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.8", default-features = false, features = ["v1_17"] }
tokio  = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
dashmap = "*"
async-trait = "*"
either = "*"
anyhow = "*"
